@startuml ClassDiagram_Overview
' ステレオタイプの色設定
skinparam class {
    BackgroundColor<<MonoBehaviour>> LightBlue
    BackgroundColor<<ScriptableObject>> LightGreen
    BackgroundColor<<Interface>> LightYellow
    BackgroundColor<<static>> LightGray
}

' --- インターフェース定義 ---
interface IMovable <<Interface>>
interface IShootable <<Interface>>

' --- マネージャー ---
class DanmakuGameManager <<MonoBehaviour>>

' --- エンティティ基盤 ---
abstract class EntityController <<MonoBehaviour>>
class GameEntity <<ScriptableObject>>
class GameEntityProperty <<ScriptableObject>>

' --- Player ---
class PlayerController <<MonoBehaviour>>
class Player <<ScriptableObject>>
class PlayerProperty <<ScriptableObject>>

' --- Enemy ---
class EnemyController <<MonoBehaviour>>
class Enemy <<ScriptableObject>>
class EnemyProperty <<ScriptableObject>>

' --- Bullet ---
class BulletController <<MonoBehaviour>>
class Bullet <<ScriptableObject>>
class BulletProperty <<ScriptableObject>>

' --- パターン関連 ---
abstract class PatternBase <<ScriptableObject>>
abstract class MovePatternBase <<ScriptableObject>>
abstract class ShootPatternBase <<ScriptableObject>>
class LoopPattern <<ScriptableObject>>
class ParallelPattern <<ScriptableObject>>
class SequencePattern <<ScriptableObject>>

' --- その他 ---
class EnemyLifeGaugeController <<MonoBehaviour>>
class AngleUtility <<static>>

' --- 継承関係 ---
EntityController <|-- PlayerController
EntityController <|-- EnemyController
EntityController <|-- BulletController
GameEntity <|-- Player
GameEntity <|-- Enemy
GameEntity <|-- Bullet
GameEntityProperty <|-- PlayerProperty
GameEntityProperty <|-- EnemyProperty
GameEntityProperty <|-- BulletProperty
PatternBase <|-- MovePatternBase
PatternBase <|-- ShootPatternBase
PatternBase <|-- LoopPattern
PatternBase <|-- ParallelPattern
PatternBase <|-- SequencePattern
IMovable <|.. EntityController
IShootable <|.. EntityController

' --- 関連 ---
PlayerController ..> DanmakuGameManager : "calls"
EntityController o-- GameEntity : "_entity"
GameEntity o-- "1" GameEntityProperty : "property"
GameEntityProperty o-- PatternBase : "shootPattern"
GameEntityProperty o-- PatternBase : "movePattern"
PatternBase ..> EntityController : "uses"
BulletController ..> EnemyController : "calls TakeDamage"
EnemyController ..> EnemyLifeGaugeController : "creates"
AngleUtility ..> PlayerController : "finds"

@enduml
